--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -1,6 +1,7 @@
 \newcommand*{\srmap}{P}
 \newcommand*{\opers}{O}
 \newcommand*{\servouts}{B}
+\newcommand*{\accumulatedcup}{\overbrace{\accumulated}}
 
 \section{Accumulation}\label{sec:accumulation}
 
@@ -41,10 +42,10 @@ We define $\delta^\dagger$ as the state after the integration of the preimages:
 Accumulation of a work-package/work-report is deferred in the case that it has a not-yet-fulfilled dependency and is cancelled entirely in the case of an invalid dependency. Dependencies are specified as work-package hashes and in order to know which work-packages have been accumulated already, we maintain a history of what has been accumulated. This history, $\accumulated$, is sufficiently large for an epoch worth of work-reports. For all such reports, we also retain their segment-root in order that we may validate any guarantor-proscribed segment-roots in work-reports prior to accumulation. Formally:
 \begin{align}
   \accumulated &\in \seq{\dict{\H}{\H}}_\mathsf{E} \\
-  \wideparen{\accumulated} &\equiv \bigcup_{x \in \accumulated}(x)
+  \accumulatedcup &\equiv \bigcup_{x \in \accumulated}(x)
 \end{align}
 
-We also maintain knowledge of available but not-yet-accumulated work-reports in the state item $\ready$. Each of these have been available for at most one epoch but have or had unfulfilled dependencies. Alongside the work-report itself, we retain its unaccumulated dependencies, a set of work-package hashes. Formally:
+We also maintain knowledge of ready (\ie available and/or audited) but not-yet-accumulated work-reports in the state item $\ready$. Each of these were made available at most one epoch ago but have or had unfulfilled dependencies. Alongside the work-report itself, we retain its unaccumulated dependencies, a set of work-package hashes. Formally:
 \begin{align}
   \ready &\in \seq{\seq{(\mathbb{W}, \{\H\})}}_\mathsf{E}
 \end{align}
@@ -56,7 +57,7 @@ The newly available work-reports, $\mathbf{W}$, are partitioned into two sequenc
     D(w) \mid
     w \orderedin \mathbf{W},
     (w_x)_p \ne \none \vee w_\wr¬srlookup \ne \{\}
-  }, \wideparen{\accumulated})\!\!\\
+  }, \accumulatedcup)\!\!\!\!\\
   D(w) &\equiv (w, (w_x)_p \cup \keys{w_\wr¬srlookup})
 \end{align}
 
@@ -68,7 +69,7 @@ We must define the two dependent functions. Firstly, the mapping function $\srma
   \end{aligned}\right.
 \end{equation}
 
-Next, the queue-editing function $E$, which is essentially a mutator function for items such as those of $\ready$, parameterized by a dictionary similar to the items in $\accumulated$. It is used to update queues of work-reports when some of them are accumulated. Functionally, it removes all entries whose work-report's hash is in the parameter's keys, removes any dependencies which appear in said set and, crucially, removes any entries whose segment-root correspondences diverge from those in the dictionary. Formally:
+Next, the queue-editing function $E$, which is essentially a mutator function for items such as those of $\ready$, parameterized by a dictionary such as the items in $\accumulated$. It is used to update queues of work-reports when some of them are accumulated. Functionally, it removes all entries whose work-report's hash is in the parameter's keys, removes any dependencies which appear in said set and, crucially, removes any entries whose segment-root correspondences diverge from those in the dictionary. Formally:
 \begin{equation}
   E\colon\left\{\begin{aligned}
       &(\seq{(\mathbb{W}, \{\H\})}, \dict{\H}{\H}) \to \seq{(\mathbb{W}, \{\H\})} \\
@@ -98,20 +99,20 @@ We further define the accumulation priority queue function $Q$, which provides t
 
 We may now define the sequence of accumulatable work-reports in this block as $\mathbf{W}^*$:
 \begin{equation}
-  \mathbf{W}^* \equiv \mathbf{W}^! \frown Q(\wideparen{\ready_{m\dots}} \concat \wideparen{\ready_{\dots m}} \concat \mathbf{W}^Q, \wideparen{\accumulated})
+  \mathbf{W}^* \equiv \mathbf{W}^! \frown Q(\wideparen{\ready_{m\dots}} \concat \wideparen{\ready_{\dots m}} \concat \mathbf{W}^Q, \accumulatedcup)
 \end{equation}
 
 \subsection{Execution}
 
-We work with a limited amount of gas per block and therefore may not be able to process all items in $\mathbf{W}^*$ in a single block. There are two slightly antagonistic factors allowing us to optimize the amount of work-items, and this work-reports, accumulated in a single block:
+We work with a limited amount of gas per block and therefore may not be able to process all items in $\mathbf{W}^*$ in a single block. There are two slightly antagonistic factors allowing us to optimize the amount of work-items, and thus work-reports, accumulated in a single block:
 
-Firstly, while we have a well-known gas-limit for each work-item to be accumulated, it is just that; a \emph{limit}. Accumulation may result in a lower amount of gas used, and only after a work-item is accumulated can it be known if further gas remains to be used. This implies a sequential execution pattern.
+Firstly, while we have a well-known gas-limit for each work-item to be accumulated, accumulation may still result in a lower amount of gas used. Only after a work-item is accumulated can it be known if it uses less gas than the advertised limit. This implies a sequential execution pattern.
 
 Secondly, since \textsc{pvm} setup cannot be expected to be zero-cost, we wish to amortize this cost over as many work-items as possible. This can be done by aggregating work-items associated with the same service into the same \textsc{pvm} invocation. This implies a non-sequential execution pattern.
 
-We resolve this by defining a function $\Delta_+$ which accumulates work-reports in a sequential manner, and which itself utilizes a function $\Delta_*$ which accumulates work-reports in a non-sequential, service-aggregated manner.
+We resolve this by defining a function $\Delta_+$ which accumulates work-reports sequentially, and which itself utilizes a function $\Delta_*$ which accumulates work-reports in a non-sequential, service-aggregated manner.
 
-Only once all such accumulation is executed do we integrate the results and thus define the relevent posterior state items. In doing so we also integrate the consequences of any \emph{deferred-transfers} implied by accumulation.
+Only once all such accumulation is executed do we integrate the results and thus define the relevant posterior state items. In doing so we also integrate the consequences of any \emph{deferred-transfers} implied by accumulation.
 
 Our formalisms begin by defining $\partialstate$ as a characterization (\ie values capable of representing) of state components which are both needed and mutable by the accumulation process. This comprises the service accounts state (as in $\delta$), the upcoming validator keys $\iota$, the queue of work-reports $\varphi$ and the privileges state $\chi$. Formally:
 \begin{equation}
