--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -268,7 +268,6 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{I} = 4$] The maximum amount of work items in a package.
   \item[$\mathsf{K} = 16$] The maximum number of tickets which may be submitted in a single extrinsic.
   \item[$\mathsf{L} = 14,400$] The maximum age in timeslots of the lookup anchor.
-  \item[$\mathsf{M} = 128$] The size of a transfer memo in octets.
   \item[$\mathsf{N} = 2$] The number of ticket entries per validator.
   \item[$\mathsf{O} = 8$] The maximum number of items in the authorizations pool.
   \item[$\mathsf{P} = 6$] The slot period, in seconds.
@@ -278,11 +277,12 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{U} = 5$] The period in timeslots after which reported but unavailable work may be replaced.
   \item[$\mathsf{V} = 1023$] The total number of validators.
   \item[$\mathsf{W}_C = 4,000,000$] The maximum size of service code in octets.
-  \item[$\mathsf{W}_E = 684$] The basic size of our erasure-coded pieces. See equation \ref{eq:erasurecoding}.
+  \item[$\mathsf{W}_E = 684$] The basic size of erasure-coded pieces in octets. See equation \ref{eq:erasurecoding}.
   \item[$\mathsf{W}_M = 2^{11}$] The maximum number of entries in a work-package manifest.
   \item[$\mathsf{W}_P = 12\cdot2^{20}$] The maximum size of an encoded work-package together with its extrinsic data and import implications, in octets.
   \item[$\mathsf{W}_R = 96\cdot2^{10}$] The maximum size of an encoded work-report in octets.
-  \item[$\mathsf{W}_S = 6$] The size of an exported segment in erasure-coded pieces.
+  \item[$\mathsf{W}_S = 6$] The size of an exported segment in erasure-coded pieces in octets.
+  \item[$\mathsf{W}_T = 128$] The size of a transfer memo in octets.
   \item[$\mathsf{X}$] Context strings, see below.
   \item[$\mathsf{Y} = 500$] The number of slots into an epoch at which ticket-submission ends.
   \item[$\mathsf{Z}_A = 2$] The \textsc{pvm} dynamic address alignment factor. See equation \ref{eq:jumptablealignment}.
