--- a/biblio.bib
+++ b/biblio.bib
@@ -297,7 +297,7 @@
 
 @article{koute2024risc0,
   title = {PolkaVM/RISC0 Benchmark Results},
-  author          = {{PolkaVM Project}},
+  author          = {{Polka\textsc{vm} Project}},
   year            = {2024},
   url = {https://github.com/koute/risc0-benchmark/blob/master/README.md},
   note = {Fetched 3rd April, 2024}
