--- a/text/previous_work.tex
+++ b/text/previous_work.tex
@@ -34,7 +34,7 @@ While the protocol's foundation makes no great presuppositions on the nature of 
 
 \textsc{Zk-snark}s come with constraints. There is a trade-off between the proof's size, verification complexity and the computational complexity of generating it. Non-trivial computation, and especially the sort of general-purpose computation laden with binary manipulation which makes smart-contracts so appealing, is hard to fit into the model of \textsc{snark}s.
 
-To give a practical example, \textsc{risc}-zero (as assessed by \cite{bogli2024assessing}) is a leading project and provides a platform for producing \textsc{snark}s of computation done by a \textsc{risc-v} virtual machine, an open-source and succinct \textsc{risc} machine architecture well-supported by tooling. A recent benchmarking report by \cite{koute2024risc0} showed that compared to \textsc{risc}-zero's own benchmark, proof generation alone takes over 61,000 times as long as simply recompiling and executing even when executing on 32 times as many cores, using 20,000 times as much \textsc{ram} and an additional state-of-the-art \textsc{gpu}. According to hardware rental agents \url{https://cloud-gpus.com/}, the cost multiplier of proving using \textsc{risc}-zero is 66,000,000x of the cost\footnote{In all likelihood actually substantially more as this was using low-tier ``spare'' hardware in consumer units, and our recompiler was unoptimized.} to execute using our \textsc{risc-v} recompiler.
+To give a practical example, \textsc{risc}-zero (as assessed by \cite{bogli2024assessing}) is a leading project and provides a platform for producing \textsc{snark}s of computation done by a \textsc{risc-v} virtual machine, an open-source and succinct \textsc{risc} machine architecture well-supported by tooling. A recent benchmarking report by \cite{koute2024risc0} showed that compared to \textsc{risc}-zero's own benchmark, proof generation alone takes over 61,000 times as long as simply recompiling and executing even when executing on 32 times as many cores, using 20,000 times as much \textsc{ram} and an additional state-of-the-art \textsc{gpu}. According to hardware rental agents \url{https://cloud-gpus.com/}, the cost multiplier of proving using \textsc{risc}-zero is 66,000,000x of the cost\footnote{In all likelihood actually substantially more as this was using low-tier ``spare'' hardware in consumer units, and our recompiler was unoptimized.} to execute using the Polka\textsc{vm} recompiler.
 
 Many cryptographic primitives become too expensive to be practical to use and specialized algorithms and structures must be substituted. Often times they are otherwise suboptimal. In expectation of the use of \textsc{snark}s (such as \textsc{plonk} as proposed by \cite{cryptoeprint:2019/953}), the prevailing design of the Ethereum project's Dank-sharding availability system uses a form of erasure coding centered around polynomial commitments over a large prime field in order to allow \textsc{snark}s to get acceptably performant access to subsections of data. Compared to alternatives, such as a binary field and Merklization in the present work, it leads to a load on the validator nodes orders of magnitude higher in terms of \textsc{cpu} usage.
 
