Tighten up language in accumulation

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -204,7 +204,7 @@ This introduces $\mathbb{O}$, the set of wrangled \emph{operand tuples}, used as
 
 \subsection{Deferred Transfers and State Integration}
 
-Given the result of the top-level $\Delta_+$, we may define the posterior state $\chi'$, $\varphi'$ and $\iota'$ as well as the second intermediate state of the service-accounts $\delta'$ and the \textsc{Beefy} commitment map $\beefycommitmap$:
+Given the result of the top-level $\Delta_+$, we may define the posterior state $\chi'$, $\varphi'$ and $\iota'$ as well as the second intermediate state of the service-accounts $\delta^\ddagger$ and the \textsc{Beefy} commitment map $\beefycommitmap$:
 \begin{align}
   \using (n, \mathbf{o}, \mathbf{t}, \beefycommitmap) &= \Delta_+(\mathsf{G}_T, \mathbf{W}^*, (\chi, \delta^\dagger, \iota, \varphi), \chi_\mathbf{g}) \\
   (\chi', \delta^\ddagger, \iota', \varphi') &\equiv \mathbf{o}
@@ -220,7 +220,7 @@ We have denoted the sequence of implied transfers as $\mathbf{t}$, ordered inter
   \end{aligned}\right.
 \end{align}
 
-The posterior state $\delta'$ may then be defined as the intermediate state with all the deferred effects of the transfers applied:
+The posterior state $\delta'$ may then be defined as the second intermediate state with all the deferred effects of the transfers applied:
 \begin{equation}
   \delta' = \{ s \mapsto \Psi_T(\delta^\ddagger, a, R(\mathbf{t}, s)) \mid (s \mapsto a) \in \delta^\ddagger \}
 \end{equation}
