--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -58,18 +58,10 @@ The newly available work-reports, $\mathbf{W}$, are partitioned into two sequenc
     w \orderedin \mathbf{W},
     (w_x)_p \ne \none \vee w_\wr¬srlookup \ne \{\}
   }, \accumulatedcup)\!\!\!\!\\
-  D(w) &\equiv (w, (w_x)_p \cup \keys{w_\wr¬srlookup})
+  D(w) &\equiv (w, \{(w_x)_p\} \cup \keys{w_\wr¬srlookup})
 \end{align}
 
-We must define the two dependent functions. Firstly, the mapping function $\srmap$ which builds a dictionary of work-package hashes to segment-roots from a set of work-reports. Formally:
-\begin{equation}
-  \srmap\colon\left\{\begin{aligned}
-    \{\mathbb{W}\} &\to \dict{\H}{\H}\\
-    \mathbf{w} &\mapsto \{ ((w_s)_h \mapsto (w_s)_e) \mid w \in \mathbf{w} \}
-  \end{aligned}\right.
-\end{equation}
-
-Next, the queue-editing function $E$, which is essentially a mutator function for items such as those of $\ready$, parameterized by a dictionary such as the items in $\accumulated$. It is used to update queues of work-reports when some of them are accumulated. Functionally, it removes all entries whose work-report's hash is in the parameter's keys, removes any dependencies which appear in said set and, crucially, removes any entries whose segment-root correspondences diverge from those in the dictionary. Formally:
+We define the queue-editing function $E$, which is essentially a mutator function for items such as those of $\ready$, parameterized by a dictionary such as the items in $\accumulated$. It is used to update queues of work-reports when some of them are accumulated. Functionally, it removes all entries whose work-report's hash is in the parameter's keys, removes any dependencies which appear in said set and, crucially, removes any entries whose segment-root correspondences diverge from those in the dictionary. Formally:
 \begin{equation}
   E\colon\left\{\begin{aligned}
       &(\seq{(\mathbb{W}, \{\H\})}, \dict{\H}{\H}) \to \seq{(\mathbb{W}, \{\H\})} \\
@@ -78,7 +70,7 @@ Next, the queue-editing function $E$, which is essentially a mutator function fo
       \,\middle\vert\,
       \left\{\,\begin{aligned}
         &(w, \mathbf{d}) \orderedin \mathbf{r} ,\\
-        &\mathcal{H}(\se(w)) \not\in \keys{\mathbf{x}},\\
+        &(w_s)_h \not\in \keys{\mathbf{x}},\\
         &\mathbf{x} \cup w_\wr¬srlookup = w_\wr¬srlookup \cup \mathbf{x}
       \end{aligned}\right.
       \right]
@@ -97,10 +89,19 @@ We further define the accumulation priority queue function $Q$, which provides t
   \end{aligned}\right.
 \end{equation}
 
-We may now define the sequence of accumulatable work-reports in this block as $\mathbf{W}^*$:
+Finally, we define the mapping function $\srmap$ which builds a dictionary of work-package hashes to segment-roots from a set of work-reports:
 \begin{equation}
-  \mathbf{W}^* \equiv \mathbf{W}^! \frown Q(\wideparen{\ready_{m\dots}} \concat \wideparen{\ready_{\dots m}} \concat \mathbf{W}^Q, \accumulatedcup)
+  \srmap\colon\left\{\begin{aligned}
+    \{\mathbb{W}\} &\to \dict{\H}{\H}\\
+    \mathbf{w} &\mapsto \{ ((w_s)_h \mapsto (w_s)_e) \mid w \in \mathbf{w} \}
+  \end{aligned}\right.
 \end{equation}
+
+We may now define the sequence of accumulatable work-reports in this block as $\mathbf{W}^*$:
+\begin{align}
+  \using m &= \mathbf{H}_t \bmod \mathsf{E}\\
+  \mathbf{W}^* &\equiv \mathbf{W}^! \frown Q(\wideparen{\ready_{m\dots}} \concat \wideparen{\ready_{\dots m}} \concat \mathbf{W}^Q, \accumulatedcup)
+\end{align}
 
 \subsection{Execution}
 
@@ -135,7 +136,7 @@ Finally, we denote the set of service/hash pairs, utilized as a service-indexed 
   \servouts \equiv \{(\N_S, \H)\}
 \end{equation}
 
-We define the outer accumulation function $\Delta_+$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $(\mathbf{x}', \mathbf{d}', \mathbf{i}', \mathbf{q}')$ and the resultant deferred-transfers $\defxfer$ and accumulation-output pairings $\servouts$:
+We define the outer accumulation function $\Delta_+$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $\mathbf{o}$ and the resultant deferred-transfers $\defxfer$ and accumulation-output pairings $\servouts$:
 \begin{equation}
   \Delta_+\colon\left\{\begin{aligned}
     &(\N_G, \seq{\mathbb{W}}, \partialstate, \dict{\N_S}{\N_G}) \to (\N, \partialstate, \defxfers, \servouts) \\
@@ -159,7 +160,7 @@ We come to define the parallelized accumulation function $\Delta_*$ which, with 
     &\text{where:}\\
     &\ \begin{aligned}
       \mathbf{s} &= \{ \mathbf{r}_s \mid w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} \} \cup \keys{\mathbf{f}} \\
-      u &= \sum_{s \in \mathbf{s}}(\Delta_1(\mathbf{o}, \mathbf{w}, s)_u) \\
+      u &= \sum_{s \in \mathbf{s}}(\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_u) \\
       \mathbf{b} &= \{ (s, b) \mid s \in \mathbf{s},\, b = \Delta_1(\mathbf{o}, \mathbf{w}, s)_b,\, b \ne \none \} \\
       \mathbf{t} &= [\Delta_1(\mathbf{o}, \mathbf{w}, s)_\mathbf{t} \mid s \orderedin \mathbf{s}] \\
       &((m, a, v, \mathbf{z}), \mathbf{d}, \mathbf{i}, \mathbf{q}) = \mathbf{o} \\
@@ -234,7 +235,7 @@ We define the final state of the ready queue and the accumulated map by integrat
   \forall i \in \N_\mathsf{E} : \ready'^\circlearrowleft_{m - i} &\equiv \begin{cases}
     E(\mathbf{W}^Q, \mathbf{W}^*_{\dots n}) &\when i = 0 \\
     [] &\when 1 \le i < s \\
-    \ready^\circlearrowleft_{m - i} &\when i \ge s\\
+    E(\ready^\circlearrowleft_{m - i}, \mathbf{W}^*_{\dots n}) &\when i \ge s\\
     \multicolumn{2}{l}{\quad\where s = \min(\tau' - \tau, \mathsf{E})}
   \end{cases}
 \end{align}
