Fix the Delta+ description

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -136,7 +136,7 @@ Finally, we denote the set of service/hash pairs, utilized as a service-indexed 
   \servouts \equiv \{(\N_S, \H)\}
 \end{equation}
 
-We define the outer accumulation function $\Delta_+$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $\mathbf{o}$ and the resultant deferred-transfers $\defxfer$ and accumulation-output pairings $\servouts$:
+We define the outer accumulation function $\Delta_+$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the number of work-results accumulated, a posterior state-context, the resultant deferred-transfers and accumulation-output pairings:
 \begin{equation}
   \Delta_+\colon\left\{\begin{aligned}
     &(\N_G, \seq{\mathbb{W}}, \partialstate, \dict{\N_S}{\N_G}) \to (\N, \partialstate, \defxfers, \servouts) \\
