WP&WR: Include auth output for Psi_R function

--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -177,6 +177,7 @@ Where:
     \wiX_\mathbf{y},
     \wpX_\wp¬context,
     \wpX_\wp¬authorizer,
+    \mathbf{o},
     \importsegmentdata(w, \mathbf{l}),
     \extrinsicdata(w),
     \ell
